--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-account_name = "dreamartslndn"
+account_name = "greybeanieproductions"
 post_year = 2024
 max_posts = 60
 output_path = "instagram-stats.csv"
